test_scripts/errors/loop_variable_not_in_scope.stderr
 1 | let lst = ["foo", "bar", "baz"];
 2 | for item in lst {}
 3 | print(item);
           ^^^^
Error: Unknown identifier "item"
